--- a/installers/windows/ReadMe.htm
+++ b/installers/windows/ReadMe.htm
@@ -7,7 +7,7 @@
 <h1>Cred Lithium Luna GUI Wallet</h1>
 
   <p>Copyright (c) 2014-2018, The Cred Project<br>
-  Date: July 27, 2018</p>
+  Date: March 18, 2018</p>
 
 <h2>Preface</h2>
 
@@ -23,7 +23,7 @@
 
 <h2>Content of the Package</h2>
 
-  <p>You just installed the <i>Cred GUI wallet</i> for Windows, release Lithium Luna, more exact version 1.0.0.0.
+  <p>You just installed the <i>Cred GUI wallet</i> for Windows, release Lithium Luna, more exact version 0.12.0.0.
   The wallet enables you to send and receive Credj in a secure and very private way.
   </p>
 
@@ -61,7 +61,7 @@
   provides the most security and privacy possible for you.</p>
 
   <p>However if your Internet access makes it difficult to run a full node, or if you have simply no room to store
-  the blockchain locally (around 60 GB in summer 2018, and of course growing), you can compromise and try to connect
+  the blockchain locally (around 50 GB in spring 2018, and of course growing), you can compromise and try to connect
   to a remote node. One way of finding such a node is checking
   <a href="https://credworld.com/#nodes">this page</a>.
   </p>
@@ -75,13 +75,15 @@
   Beside the GUI wallet there is second program, the so-called <i>Cred daemon</i>, which will carry out that download.
   You find it in the <i>Utilities</i> sub-folder of the program group.</p>
 
-  <p>Depending on your Internet access, the speed of your computer and the type of disk you use (HDD or SSD) this can take
+  <p>Depending on your Internet access and the speed of your computer this can take
   <b>several hours</b>, in some cases <b>more than a day</b>. Furthermore there are unfortunate cases where the
   download gets stuck somehow or doesn't work at all, e.g. because a firewall prevents access to other nodes of the
   Cred network.</p>
 
-  <p>The GUI wallet can start the daemon for you. You can also use the <i>Cred Daemon</i> icon in the <i>Utilities</i>
-  sub-folder of the Cred program group.</p>
+  <p>The GUI wallet can start the daemon for you, but that way you will not see much during initial blockchain
+  download, especially you probably won't see any error messages in case something goes wrong. By starting the
+  daemon yourself "by hand" using the <i>Cred Daemon</i> icon in the <i>Utilities</i> sub-folder of the
+  Cred program group you will see it running and displaying messages in a separate window.</p>
    
   <p>If all goes well the daemon will finally display a message like this:
   <i>You are now synchronized with the network.</i></p>
